[gd_scene load_steps=12 format=3 uid="uid://cd5w4mho1g1c8"]

[ext_resource type="Script" path="res://main.gd" id="1_2g76d"]
[ext_resource type="Texture2D" uid="uid://6ixshqtk2ep1" path="res://assets/grass.png" id="1_2ll1n"]
[ext_resource type="PackedScene" uid="uid://y6lu5suvvm3k" path="res://player.tscn" id="2_e4hmy"]
[ext_resource type="PackedScene" uid="uid://bhvyvmc5k3h40" path="res://powerup.tscn" id="3_fmaa5"]
[ext_resource type="PackedScene" uid="uid://f84e45trigqe" path="res://coin.tscn" id="4_bx46c"]
[ext_resource type="PackedScene" uid="uid://k5tac7btyldt" path="res://hud.tscn" id="5_alvvo"]
[ext_resource type="AudioStream" uid="uid://bjmrrk77pt0qq" path="res://assets/audio/Coin.wav" id="6_ssffx"]
[ext_resource type="AudioStream" uid="uid://bargk63phvyaf" path="res://assets/audio/Level.wav" id="7_irtxs"]
[ext_resource type="AudioStream" uid="uid://d1k1a8gjpxu86" path="res://assets/audio/EndSound.wav" id="8_yru0h"]
[ext_resource type="AudioStream" uid="uid://xmvubqhoeqx8" path="res://assets/audio/Powerup.wav" id="9_svwpv"]
[ext_resource type="PackedScene" uid="uid://ca5smqs4lto2i" path="res://cactus.tscn" id="11_r5kg3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2g76d")
coin_scene = ExtResource("4_bx46c")
powerup_scene = ExtResource("3_fmaa5")
cactus_scene = ExtResource("11_r5kg3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("1_2ll1n")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_e4hmy")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_alvvo")]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ssffx")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_irtxs")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_yru0h")

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_svwpv")

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
